style.less
//LESS document

// includes
@import "functions";
@import "values";

/*
Theme Name: Mineral School
Theme URI: http://www.staging.designbydoug.com/themes/mineralschool
Author: Seattle Central College ITC 210 project team
Author URI: http://staging.designbydoug.com
Description: Wordpress theme for Mineral School, designed and developed by the ITC 210 project team at Seattle Central College
License: 
License URI: 
*/

/***** resets *****/

body, body * {
  padding: 0;
  margin: 0;
}

a img {
  border: 0;
}

/****** body styles *****/

body {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.5;
}

/****** header styles *****/

header.header-main {
  max-width: 1180px;
  padding: 0 10px;
  margin: 0 auto;
  background: tint(grey, 40%);
}

/***** nav styles *****/

div.nav-wrap {
}
nav.main-nav {
  background: tint(grey, 60%);
  max-width: 1180px;
  margin: 0 auto;
  padding: 0 10px;
  ul {
    li {
      list-style-type: none;
      a {
        &:link, &:visited {
          
        }
      }
    }
  }
  @media @tablet {
    ul {
      li {
        list-style-type: none;
        a {
        }
      }
    }
  }
}

div.menu-main-menu-container ul {
  text-align: left;
  display: inline;
  margin: 0;
  padding: 15px 4px 17px 0;
  list-style: none;
}
div.menu-main-menu-container ul li {
  font: bold 12px/18px sans-serif;
  display: inline-block;
  margin-right: -4px;
  position: relative;
  padding: 15px 20px;
  background: #fff;
  cursor: pointer;
}
div.menu-main-menu-container ul li:hover {
  background: #555;
  color: #fff;
}
div.menu-main-menu-container ul li ul {
  padding: 0;
  position: absolute;
  top: 48px;
  left: 0;
  width: 150px;
  display: none;
  opacity: 0;
  visibility: hidden;
}
div.menu-main-menu-container ul li ul li { 
  background: #555; 
  display: block; 
  color: #fff;
}
div.menu-main-menu-container ul li ul li:hover { background: #666; }
div.menu-main-menu-container ul li:hover ul {
  display: block;
  opacity: 1;
  visibility: visible;
}

/******** .main styles **********/

.main {
  padding: 20px 10px 0 10px;
  max-width: 1180px;
  margin: 0 auto;
  overflow: hidden;
}

/******* blog title styles ******/

h1.blog-title {
  padding: 5px 0 5px 20px;
  background: grey;
  font-size: 2.2em;
}

/****** post styles ********/

.main-content {
  overflow: hidden;
  @media @tablet {
    float: left;
    .columns(8, 0);
  }
  .post-container {
    border-bottom: 3px dotted grey;
    margin-bottom: 10px;
    overflow: hidden;
    @media @tablet {
      margin-right: 40px;
      padding-left: 30px;
    }
    p.read-more {
      float: right;
      margin-bottom: 10px;
    }
  }
}

/***** page-specific post styles *****/

.page-container {
    overflow: hidden;
    @media @tablet {
      padding-left: 20px;
      p {
        padding: 0 10px;
      }
    }
  }

/******* aside#primary styles ********/

aside#primary {
  h3 {
    padding: 10px 0 10px 10px;
    background: grey;
  }
  @media @tablet {
    float: right;
    .columns(4, 0);
  }
}

div.home aside#secondary {
  h3 {
    padding: 10px 0 10px 10px;
    background: grey;
  }
  @media @tablet {
    float: right;
    .columns(4, 0);
    background: #cccccc;
  }
}

div.home aside#primary {
  @media @tablet {
    float: none;
    .columns(11, 0);
    margin-right: 10px;
    overflow: hidden;
  }
  .widget {
    float:left;
    margin-right: 10px;
    .columns(4, 0);
  }
}

/**************** footer styles **********/

footer {
  max-width: 1180px;
  margin: 0 auto;
  clear: both;
  padding: 0 10px;
  background: tint(grey, 40%);
}

  /** footer nav menu styles **/
  footer div.menu-main-menu-container {
    ul li:hover ul {
      display: none;
      visibility: hidden;
      opacity: 0;
    }
  }

/***** global typography styles ******/
h1,h2,h3,h4,h5,h6 {
  font-weight:normal;
}

h1 {
}

h2 {
}

h3 {
}

h4 {
}

p {
  margin-top: .5em;
}

ul {
  text-align:left;
  margin: .7em 0 1em 1.5em;
}

ol {
  text-align:left;
  margin: .7em 0 1em 1.75em;
}

li{
  margin: .7em 0 0 1.5em;
}

blockquote {
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
}

blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}

blockquote p {
  display: inline;
}

p.em {
  font-weight:bold;

}

a:link {
  text-decoration: underline;
}
a:visited {
}
a:hover, a:focus {
}

img {
}



/***** global form styles ******/

form {
}

form label, form input {
}

input.shortfield {
  -webkit-appearance: none;
  -moz-appearance: none;
  /*appearance: none;  */
  padding: 8px 12px;
  border: 0 none;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ie-border-radius: 3px;
  width: 25%;
  min-width: 240px;
  max-width: 340px;
}

textarea.longfield {
  -webkit-appearance: none;
  -moz-appearance: none;
  /*appearance: none;  */
  padding: 8px 12px;
  border: 0 none;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ie-border-radius: 3px;
  width: 50%;
  min-width: 240px;
  max-width: 640px;
}

/*input[type=submit] {       old way of doing this */
input.submit {
  -webkit-appearance: none;
  -moz-appearance: none;
  /*appearance: none;  */
  padding: .75em 1em;
  border: 0 none;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ie-border-radius: 3px;
}

